--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
-* {
-  border: 1px dotted black;
-}
-
 /* Basislayout */
 
 html, body {
-    height: 100%;
+
+ height: 100%;
     padding: 0;
     background-color: rgb(12, 156, 84); 
     
     color: #303030;
     font: Verdana, Arial, Sans-Serif;
-}
+   background-image: url("gras.jpg")
+ }
 
 
 main {
@@ -46,6 +44,11 @@ img.rlscherm {
     width: 250px;
 }
 
+img.zweefLinks {
+    float: right;
+    margin-left: 15px;
+    width: 250px;
+}
 .smalltext {
     font-size: 0.7em;
 }
@@ -58,7 +61,6 @@ a {
 a:hover {
     text-decoration: underlined;
 }
-
 
 /* navigatiebalk */
 nav ul {
