--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 /* Basislayout */
-*/
-box-sizing: 
-html, body {
 
- height: 100%;
-    padding: 0;
-    background-color: rgb(12, 156, 84); 
-    
-    color: #303030;
+* {
+box-sizing: border-box;
+overflow: hidden;
+margin:0px;
+border: 2px solid red;
+}
+
+html, 
+body {
+  height: 100%;
+  background-color:rgb(46, 116, 0);
+    color: #ffffff;
     font: Verdana, Arial, Sans-Serif;
  }
 
@@ -35,14 +39,41 @@ footer {
     padding-bottom: 10px;
 }
 
+.bg {
+  background-image: url("gras.jpg");
 
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.kolomrechts {
+ width:300px;
+ float:left;
+ border: 2px solid yellow;
+}
+
+.kolomlinks {
+ width: calc( 100% - 300px);
+ float:right;
+ border: 2px solid green;
+}
+
+.tektsrechts {
+  width: 100px;
+  float: right;
+  border: 2px solid blue;
+}
+
+.tekstlinks {
+  width: calc( 100% - 100px);
+  float: left;
+  border: 2px solid pink;
+}
 /* specifieke stijlen */
 
-img.rlscherm {
-    float: left;
-    margin-right: 15px;
-    width: 250px;
-}
 img.zweefLinks {
     float: right;
     margin-left: 15px;
